--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,15 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="image">图片</string>
+    <string name="detail">detail</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="share">Share</string>
+    <string name="send">Send</string>
+    <string name="communicate">Communicate</string>
+    <string name="loading">正在加载&#8230;</string>
+    <string name="god">翼哥</string>
+    <string name="description">翼哥一出手就知有没有</string>
 
 </resources>
